--- a/gb/21/4/27/n12908086.md
+++ b/gb/21/4/27/n12908086.md
@@ -1,60 +1,66 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nxaewa3302/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nxaewa3302/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nxaewa3302/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>延缓肾功能退化 改善肾病友皮肤痒</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/04/id12908088-495195-600x400.jpg" />
 <h6>肾利方程式-吴文中主任（部苗医提供）
 </h6>
 <hr>
-<p>【大纪元2021年04月27日讯】（大纪元记者陈文敏台湾苗栗综合报导）苗栗市一名84岁慢性肾脏病患张爷爷，定期至医院回诊，近期由儿子陪同就诊时，部苗医肾脏科主任吴文中发现张爷爷，不时抓<ahref="https://github.com/nxaewa3302/djy/blob/master/gb/tag/%E7%9A%AE%E8%82%A4.md#1">皮肤</a>，而拉起衣服身上露出许多抓痕、脱屑还有些破皮、色素沉积。经详细问诊，张爷爷表示常全身痒，尤其是背部和手臂，搔痒难耐。张爷爷儿子补充说，因为想控制好血糖，三餐主食由白饭换成了糙米饭，老人家牙齿不好，每餐都要配汤才吃得下。吴文中主任了解后说明，皮肤搔痒成因众多，而张爷爷抽血报告的血磷数值高达6.2mg/dl，应可藉由控制血磷改善。</p>
+<p>【大纪元2021年04月27日讯】（大纪元记者陈文敏台湾苗栗综合报导）苗栗市一名84岁慢性肾脏病患张爷爷，定期至医院回诊，近期由儿子陪同就诊时，部苗医肾脏科主任吴文中发现张爷爷，不时抓<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%9A%AE%E8%82%A4.md#1">皮肤</a>，而拉起衣服身上露出许多抓痕、脱屑还有些破皮、色素沉积。经详细问诊，张爷爷表示常全身痒，尤其是背部和手臂，搔痒难耐。张爷爷儿子补充说，因为想控制好血糖，三餐主食由白饭换成了糙米饭，老人家牙齿不好，每餐都要配汤才吃得下。吴文中主任了解后说明，皮肤搔痒成因众多，而张爷爷抽血报告的血磷数值高达6.2mg/dl，应可藉由控制血磷改善。</p>
 <figure id="12908089" aria-describedby="caption-12908089" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/04/id12908089-495196-450x302.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/04/id12908089-495196-450x302.jpg" alt="肾利方程式-营养师" width="500" /></a><figcaption id="caption-12908089" class="wp-caption-text">肾利方程式-营养师（部苗医提供）</figcaption></figure>
-<p>经由部苗医肾脏团队的照护、低磷饮食指导，张爷爷日前再返院抽血的检查报告，血磷已降4.8mg/dl，<ahref="https://github.com/nxaewa3302/djy/blob/master/gb/tag/%E7%9A%AE%E8%82%A4.md#1">皮肤</a>抓痕也变少了，显见皮肤痒症状已获改善。</p>
+<p>经由部苗医肾脏团队的照护、低磷饮食指导，张爷爷日前再返院抽血的检查报告，血磷已降4.8mg/dl，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%9A%AE%E8%82%A4.md#1">皮肤</a>抓痕也变少了，显见皮肤痒症状已获改善。</p>
 <p>台湾肾脏病发生率居高不下，吴文中主任指出，常见慢性肾脏病患者因皮肤痒，抓到体无完肤，生活品质也大受影响。</p>
 <p>吴主任说明，肾脏病友，往往因为尿毒累积、皮肤干燥、高血磷、副甲状腺素增加等因素，引发皮肤痒症状，提醒及早就医寻求改善，以避免病情加重及减少感染风险。吴主任表示，临床上通常依病人状况，建议采用低磷饮食、服用钙片、尿毒素吸附剂【Kremezin】，来缓和皮肤搔痒情形，若持续严重搔痒不适，建议至皮肤科就医。</p>
-<p>部苗医营养师林昱蓁林营养师解说，磷是骨骼牙齿生长及合成身体能量的重要矿物质。高血磷可能是因为肾脏功能的衰退，造成饮食中摄取过多的磷无法从尿液排出，使血液中磷的蓄积。适度控制饮食中磷的含量，可以延缓<ahref="https://github.com/nxaewa3302/djy/blob/master/gb/tag/%E8%82%BE%E5%8A%9F%E8%83%BD.md#1">肾功能</a>的衰退，并预防肾骨病变的发生。</p>
+<p>部苗医营养师林昱蓁林营养师解说，磷是骨骼牙齿生长及合成身体能量的重要矿物质。高血磷可能是因为肾脏功能的衰退，造成饮食中摄取过多的磷无法从尿液排出，使血液中磷的蓄积。适度控制饮食中磷的含量，可以延缓<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%82%BE%E5%8A%9F%E8%83%BD.md#1">肾功能</a>的衰退，并预防肾骨病变的发生。</p>
 <p>林昱蓁营养师进一步说明，慢性肾脏病人建议每日磷摄取量为800－1000毫克，常见高磷食物如一般乳制品、全谷类、干豆类、内脏类、坚果类、芝麻、肉松、加工食品、火锅料……都应避免食用。而低蛋白饮食其实也是一种低磷饮食原则，建议依慢性肾脏病期别，适量控制蛋白质摄取，也可达到避免高血磷的风险。</p>
-<p>吴文中主任提醒，及早借助专业医疗卫教与追踪的介入，可以有效延缓<ahref="https://github.com/nxaewa3302/djy/blob/master/gb/tag/%E8%82%BE%E5%8A%9F%E8%83%BD.md#1">肾功能</a>退化和避免皮肤搔痒不适等问题，部苗医肾脏照护团队提供相关保健咨询服务，欢迎乡亲多加利用，洽询专线：037-261920转2184周慧琴卫教师。</p>
+<p>吴文中主任提醒，及早借助专业医疗卫教与追踪的介入，可以有效延缓<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%82%BE%E5%8A%9F%E8%83%BD.md#1">肾功能</a>退化和避免皮肤搔痒不适等问题，部苗医肾脏照护团队提供相关保健咨询服务，欢迎乡亲多加利用，洽询专线：037-261920转2184周慧琴卫教师。</p>
 <p>责任编辑：昌英</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/9/16/n12406419.md#1">增肌除了蛋白质 一定要吃糖类！怎样吃最有效</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/20/10/9/n12464329.md#1">【医案】披肝沥胆</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/21/1/16/n12692725.md#1">尿液出现2种颜色要小心！这些症状恐是肾脏病</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/21/3/15/n12811445.md#1">做好肾脏保健七大要诀  远离洗肾的阴影</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/21/4/12/n12875070.md#1">缺钾会疲劳、失眠？除了香蕉 这些食物含钾更高</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/21/4/19/n12890742.md#1">蛋白质吃太多肾功能会变差？肾脏病饮食怎么吃</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/21/4/22/n12898079.md#1">甘比亚母飞越9千英里 来台捐肾救子</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13613400.md#1">1966 长照服务伴你左右</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13613360.md#1">头屋乡举办植树节活动 4千株树苗免费索取</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13611231.md#1">纪念二二八 林智坚：民主火炬接棒守护台湾</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/16/n12406419.md#1">增肌除了蛋白质 一定要吃糖类！怎样吃最有效</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/10/9/n12464329.md#1">【医案】披肝沥胆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/16/n12692725.md#1">尿液出现2种颜色要小心！这些症状恐是肾脏病</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/15/n12811445.md#1">做好肾脏保健七大要诀  远离洗肾的阴影</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/4/12/n12875070.md#1">缺钾会疲劳、失眠？除了香蕉 这些食物含钾更高</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/4/19/n12890742.md#1">蛋白质吃太多肾功能会变差？肾脏病饮食怎么吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/4/22/n12898079.md#1">甘比亚母飞越9千英里 来台捐肾救子</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680722.md#1">工研院携手致茂办量测论文竞赛 培育技术人才</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680584.md#1">苗栗春祭暨遥祭黄陵联合祭典</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680574.md#1">事迹受肯定 大千三位医事人员获优秀青年表扬</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045158.md#1" target="_blank">《苦菜花》人物原型的真实人生（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/18/n8113015.md#1" target="_blank">融入东方智慧 西人健康顾问获提振</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/15/n9842766.md#1" target="_blank">围墙不是永久景观——从柏林墙说起</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11245885.md#1" target="_blank">新泽西州参众议院联合决议褒奖法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nxaewa3302/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nxaewa3302/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/27/n12908086.htm">延缓肾功能退化 改善肾病友皮肤痒</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/27/n12908086.htm">延缓肾功能退化 改善肾病友皮肤痒</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nxaewa3302/djy/blob/master/gb/21/4/27/n12908086.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nxaewa3302/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nxaewa3302/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nxaewa3302/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/4/27/n12908086.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
